
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_category_notif"
        android:title="@string/pref_category_notif">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notif"
            android:title="@string/pref_title_notif" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_category_display"
        android:title="@string/pref_category_display">
        <Preference
            android:key="@string/pref_key_theme"
            android:title="@string/pref_title_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_other">
        <Preference
            android:summary="@string/developer_name"
            android:title="@string/pref_title_dev_name" />
        <Preference
            android:summary="@string/copyright"
            android:title="@string/pref_title_copyright" />
        <Preference
            android:key="key_about"
            android:title="@string/pref_title_about" />
    </PreferenceCategory>

</PreferenceScreen>
