<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <group android:id="@+id/top_sub">
            <item
                android:id="@+id/nav_all"
                android:icon="@drawable/ic_nav_all"
                android:title="@string/title_nav_all" />

            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_nav_fav"
                android:title="@string/title_nav_fav"
                app:actionLayout="@layout/menu_counter" />

            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_person"
                android:title="@string/title_nav_news" />
        </group>
        <item
            android:id="@+id/nav_tour"
            android:icon="@drawable/ic_nav_tour"
            android:title="@string/title_nav_tour" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_nav_food"
            android:title="@string/title_nav_food" />
        <item
            android:id="@+id/nav_Mall"
            android:icon="@drawable/ic_nav_religion"
            android:title="@string/title_nav_Mall" />
    </group>
    <!--Tourist Destination-->
    <!--Food & Drink-->
    <!--Hotels-->
    <!--Entertainment-->
    <!--Sport-->
    <!--Shopping-->
    <!--Transportation-->
    <!--Religion-->
    <!--Public Services-->
    <!--Money-->

</menu>
